--- a/robo-valentine.service
+++ b/robo-valentine.service
@@ -11,7 +11,7 @@ ExecReload=/opt/bitnami/node/bin/pm2 reload robo-valentine
 ExecStop=/opt/bitnami/node/bin/pm2 stop robo-valentine
 Restart=on-failure
 RestartSec=10
-Environment="PATH=/usr/bin:/usr/local/bin"
+Environment="PATH=/usr/bin:/usr/local/bin:/opt/bitnami/node/bin"
 Environment="NODE_ENV=production"
 
 [Install]
